@@ -1,22 +1,16 @@
 package it.polimi.ingsw.RMI_FINAL;
 
 import it.polimi.ingsw.CONSTANTS.Constants;
-import it.polimi.ingsw.CONTROLLER.ControllerException;
 import it.polimi.ingsw.ChatMessage;
 import it.polimi.ingsw.MODEL.Card.GoldCard;
 import it.polimi.ingsw.MODEL.Card.PlayCard;
 import it.polimi.ingsw.MODEL.Card.ResourceCard;
 import it.polimi.ingsw.MODEL.Card.Side;
-import it.polimi.ingsw.MODEL.ENUM.PlayerState;
-import it.polimi.ingsw.MODEL.Game.IndexRequestManagerF;
 import it.polimi.ingsw.MODEL.GameField;
 import it.polimi.ingsw.MODEL.Player.Player;
 import it.polimi.ingsw.MiniModel;
 import it.polimi.ingsw.RMI_FINAL.FUNCTION.*;
-import it.polimi.ingsw.RMI_FINAL.MESSAGES.ErrorMessage;
-import it.polimi.ingsw.RMI_FINAL.MESSAGES.GameFieldMessage;
 import it.polimi.ingsw.RMI_FINAL.MESSAGES.ResponseMessage;
-import it.polimi.ingsw.RMI_FINAL.MESSAGES.UpdateMessage;
 import it.polimi.ingsw.StringCostant;
 import it.polimi.ingsw.VIEW.TUI;
 
@@ -27,164 +21,74 @@ import java.rmi.registry.Registry;
 import java.rmi.server.UnicastRemoteObject;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Scanner;
 
 
 public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
     final VirtualServerF server;
     private String token;
     private VirtualGameServer rmi_controller;
-    private boolean newClient;
-    private MiniModel miniModel =  new MiniModel();
-    private StringCostant stringcostant = new StringCostant();
-    
+    private final MiniModel miniModel =  new MiniModel();
+    private final StringCostant stringcostant = new StringCostant();
+    private TUI tui;
 
     public RmiClientF(VirtualServerF server) throws IOException {
         this.server = server;
     }
 
-    public void run() throws IOException, InterruptedException, NotBoundException {
+    public void run() throws IOException, InterruptedException, NotBoundException, ClassNotFoundException {
         this.server.connect(this);
-        new TUI(this);
+        tui = new TUI(this);
+        runCli();
     }
 
+
+    private void runCli() throws NotBoundException, IOException, InterruptedException, ClassNotFoundException {
+        tui.runCli();
+    }
 
     //GAME FLOW
 
     public int checkName(String player_name) throws IOException, NotBoundException {
         int flag;
             String isnew = server.checkName(player_name,this);
-            if(isnew.equals("true")) {
-                flag = 1;
-                newClient = true;
-                this.token = server.createToken(this);}
-            else if(isnew.equals("false")){
-                flag=0;
-                System.out.println(stringcostant.name_is_not_valid);}
-            else{
-                this.token = isnew;
-                int port = server.getPort(token);
-                Registry registry = LocateRegistry.getRegistry(Constants.IPV4, port);
-                this.rmi_controller = (VirtualGameServer) registry.lookup(String.valueOf(port));
-                rmi_controller.connectRMI(this);
-                flag=2;
-                newClient = false;
-                startSendingHeartbeats();
-            }
+        if(isnew.equals("true")) {
+            flag = 1;
+            this.token = server.createToken(this);}
+        else if(isnew.equals("false")){
+            flag=0;
+            System.err.println(stringcostant.name_is_not_valid);}
+        else{
+            this.token = isnew;
+            int port = server.getPort(token);
+            Registry registry = LocateRegistry.getRegistry(Constants.IPV4, port);
+            this.rmi_controller = (VirtualGameServer) registry.lookup(String.valueOf(port));
+            rmi_controller.connectRMI(this);
+            flag=2;
+        }
+        startSendingHeartbeats();
+        tui.setToken(token);
         return flag;
     }
-    /*private void gameAccess(String player_name) throws IOException, NotBoundException {
-        if(newClient) {
-            makeChoice(player_name);
-            System.out.print("[SUCCESS] YOUR PLAYER HAS BEEN CREATED!\n");}
-    }*/
-    public boolean areThereFreeGames () throws IOException, NotBoundException {
-        if (server.getFreeGames() == null || server.getFreeGames().isEmpty()) {
-            return false;
-        }
-        return true;
-    }
-    private void chooseMatch(String player_name) throws IOException, NotBoundException {
-        Scanner scan = new Scanner(System.in);
-        boolean check;
-        System.out.println("\nEXISTING GAMES: ");
-        List<GameServer> partite = server.getFreeGames();
-        for ( VirtualGameServer r : partite) {
-            System.out.println( r.getController().getGame().getName() + " ID:" + r.getController().getGame().getIndex_game()
-                    + " " + r.getController().getGame().getNumPlayer() + "/" + r.getController().getGame().getMax_num_player() );
-        }
-        do {
-            System.out.println("\nINSERT GAME ID > ");
-            int ID = scan.nextInt();
-            check = server.findRmiController(ID, token, player_name,this);
-        }while(!check);
-        int port = server.getPort(token);
-        Registry registry = LocateRegistry.getRegistry(Constants.IPV4, port);
-        this.rmi_controller = (VirtualGameServer) registry.lookup(String.valueOf(port));
-        rmi_controller.connectRMI(this);
+
+    public boolean areThereFreeGames () throws IOException {
+        return server.getFreeGames() != null && !server.getFreeGames().isEmpty();
     }
 
-    public List<SocketRmiControllerObject> getFreeGames() throws IOException {
-        return server.getFreeGamesSocket();
-    }
-    public void createGame(String game_name, int numplayers, String player_name) throws IOException, NotBoundException {
-                int port;
-                port = server.createGame(game_name, numplayers, token, player_name,this);
-                Registry registry = LocateRegistry.getRegistry(Constants.IPV4, port);
-                this.rmi_controller = (VirtualGameServer) registry.lookup(String.valueOf(port));
-                rmi_controller.connectRMI(this);
-    }
-    
-    private void waitFullGame() throws IOException, InterruptedException {
-        
-        Scanner scan = new Scanner(System.in);
-        if(miniModel.getState().equals("NOT_INITIALIZED")) {
-            System.out.print("[WAIT FOR OTHER PLAYERS]\n");
-            while (miniModel.getState().equals("NOT_INITIALIZED")) {
-                buffering();
-            }
-            System.out.println("\n[GAME IS FULL, YOU ARE ABOUT TO START]!\n");
-        }
-        miniModel.setGameField(rmi_controller.getGameFields(token));
+
+    public List<SocketRmiControllerObject> getFreeGames() throws IOException {return server.getFreeGamesSocket();}
+    public void createGame(String game_name, int numplayers, String player_name) throws IOException, NotBoundException, InterruptedException {
+        int port;
+        port = server.createGame(game_name, numplayers, token, player_name,this);
+        Registry registry = LocateRegistry.getRegistry(Constants.IPV4, port);
+        this.rmi_controller = (VirtualGameServer) registry.lookup(String.valueOf(port));
+        //rmi_controller.connectRMI(this);
+        //startSendingHeartbeats();
         startCheckingMessages();
     }
-    private void chooseGoalState() throws IOException, InterruptedException {
-        if(miniModel.getState().equals("CHOOSE_GOAL")) {
-            if(rmi_controller.getTtoP().get(token).getGoalCard()==null) {
-                chooseGoal();
-                System.out.println("\nYOU CHOOSE :" + rmi_controller.getTtoP().get(token).getGoalCard().toString());
-            }
-            while (miniModel.getState().equals("CHOOSE_GOAL")) {
-                buffering();
-            }
-        }
-    }
-    private void chooseStartingCardState() throws IOException, InterruptedException {
-        if(miniModel.getState().equals("CHOOSE_SIDE_FIRST_CARD")) {
-            if(!rmi_controller.getTtoP().get(token).isFirstPlaced()) {
-                chooseStartingCard();
-            }
-            while (miniModel.getState().equals("CHOOSE_SIDE_FIRST_CARD")) {
-                buffering();
-            }
-        }
-    }
-    private void chooseGoal() throws IOException {
-        Scanner scan = new Scanner(System.in);
-        int done=0;
-        while(done==0) {
-            System.out.println("\nCHOOSE YOUR GOAL:\n 1-" + rmi_controller.getTtoP().get(this.token).getInitial_goal_cards().get(0).toString()
-                    + "\n 2-" + rmi_controller.getTtoP().get(this.token).getInitial_goal_cards().get(1).toString());
-            String choice = scan.nextLine();
-            if (choice.equals("1")) {
-                done=1;
-                rmi_controller.chooseGoal(token,0);
-            } else if (choice.equals("2")){
-                done=1;
-                rmi_controller.chooseGoal(token,1);
-            } else System.out.println("[ERROR] WRONG INSERT!");
-        }
-    }
-    private void chooseStartingCard() throws IOException{
-        Scanner scan = new Scanner(System.in);
-        System.out.println("\nCHOOSE STARTING CARD SIDE:\n");
-        rmi_controller.showStartingCard(token);
-        int done=0;
-        while(done==0){
-            System.out.println("\n-'B' FOR BACK SIDE \n-'F' FOR FRONT SIDE:");
-            String dec = scan.nextLine();
-            if (dec.equals("F")||dec.equals("f")){
-                done=1;
-                rmi_controller.chooseStartingCard(token,false);
-            } else if (dec.equals("B")||dec.equals("b")){
-                done=1;
-                rmi_controller.chooseStartingCard(token,true);
-            }
-            else System.out.println("[ERROR] WRONG INSERT!");
-        }
-    }
+
+
     public void manageGame(boolean endgame) throws IOException {
-        if(endgame) rmi_controller.getPoints(token);
+        if(!endgame) rmi_controller.getPoints(token);
         else rmi_controller.getFinalStandings(token);
     }
     public void selectAndInsertCard(int choice, int x, int y, boolean flipped) throws IOException, InterruptedException {
@@ -198,22 +102,21 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
         Thread.sleep(750);
     }
 
-    public boolean findRmiController(int id, String player_name) throws IOException {
+    public boolean findRmiController(int id, String player_name) throws IOException, InterruptedException {
         return server.findRmiController(id, token, player_name,this);
     }
 
     public void connectGameServer() throws IOException, NotBoundException {
         int port = server.getPort(token);
-        Registry registry = LocateRegistry.getRegistry("127.0.0.1", port);
+        Registry registry = LocateRegistry.getRegistry(Constants.IPV4, port);
         this.rmi_controller = (VirtualGameServer) registry.lookup(String.valueOf(port));
-        rmi_controller.connectRMI(this);
+        //rmi_controller.connectRMI(this);
+        startCheckingMessages();
+        //startSendingHeartbeats();
     }
 
     public boolean isGoalCardPlaced() throws IOException {
-        if(rmi_controller.getTtoP().get(token).getGoalCard()==null){
-            return true;
-        }
-        return false;
+        return rmi_controller.getTtoP().get(token).getGoalCard() == null;
     }
 
     public String getGoalPlaced() throws IOException {
@@ -222,7 +125,7 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
 
     @Override
     public String getFirstGoal() throws IOException {
-        return rmi_controller.getTtoP().get(this.token).getInitial_goal_cards().get(0).toString();
+        return rmi_controller.getTtoP().get(this.token).getInitial_goal_cards().getFirst().toString();
     }
 
     @Override
@@ -231,7 +134,7 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
     }
 
     @Override
-    public void chooseGoal(int i) throws IOException {
+    public void chooseGoal(int i) throws IOException, InterruptedException {
         rmi_controller.chooseGoal(token,i);
     }
 
@@ -241,7 +144,7 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
     }
 
     @Override
-    public void chooseStartingCard(boolean b) throws IOException {
+    public void chooseStartingCard(boolean b) throws IOException, InterruptedException {
         rmi_controller.chooseStartingCard(token,b);
     }
 
@@ -250,8 +153,20 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
         return rmi_controller.getTtoP().get(token).isFirstPlaced();
     }
 
+    @Override
+    public String getToken()  {
+        return this.token;
+    }
 
+    @Override
+    public boolean isGoldDeckPresent() throws IOException {
+        return rmi_controller.getController().getGame().getGold_deck().getNumber()>0;
+    }
 
+    @Override
+    public boolean isResourceDeckPresent() throws IOException {
+        return rmi_controller.getController().getGame().getResources_deck().getNumber()>0;
+    }
 
 
     // THREADS
@@ -260,22 +175,10 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
         new Thread(() -> {
             while (true) {
                 try {
-                    Thread.sleep(100);
                     ResponseMessage s = miniModel.popOut();
-                    if(s!=null){
-                        if( s instanceof  GameFieldMessage){
-                            showField(((GameFieldMessage) s).getField());
-                        }
-                        if ( s instanceof ErrorMessage){
-                            printString(s.getMessage());
-                        }
-                        if ( s instanceof UpdateMessage){
-                            printString(s.getMessage());
-                        }
-                    }
-                } catch (InterruptedException e) {
-                    System.err.println("impossible to pop out");
-                }
+                    if(s!=null) s.action();
+                } catch (IOException e) {throw new RuntimeException(e);}
+                try {Thread.sleep(100);} catch (InterruptedException e) {throw new RuntimeException(e);}
             }
         }).start();
     }
@@ -285,23 +188,19 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
             int cracked = 0;
             while (true) {
                 try {
-                    Thread.sleep(100);
+                    Thread.sleep(150);
                     server.receiveHeartbeat(token);
                 } catch (IOException | InterruptedException e) {
-                    if(cracked==0) {
-                        cracked = 1;
-                        System.err.println("Network disconnected");
+                        System.err.println("\n              [SERVER ERROR] \n           SERVER DISCONNECTED");
+                        while(true) {
+                            try {tui.buffering();} catch (InterruptedException ignored) {}
                     }
                 }
             }
         }).start();
     }
 
-    public void setGameFieldMiniModel() throws IOException {
-        miniModel.setGameField(rmi_controller.getGameFields(token));
-    }
-
-
+    public void setGameFieldMiniModel() throws IOException {miniModel.setGameField(rmi_controller.getGameFields(token));}
 
     //SETTERS
 
@@ -318,34 +217,37 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
         else{rmi_controller.chattingMoment(miniModel.getMy_index(), decision, new ChatMessage(message, miniModel.getMy_player()));}
     }
 
-
-    private ChatMessage insertMessage() {
-        Scanner scan = new Scanner(System.in);
-        System.out.println("Insert message to send:");
-        String s = scan.nextLine();
-        return new ChatMessage(s);
-    }
-
-    private void buffering() throws IOException, InterruptedException{
-        Thread.sleep(1000);
-        System.out.print("\b");
-        System.out.print("/");
-        Thread.sleep(1000);
-        System.out.print("\b");
-        System.out.print("|");
-        Thread.sleep(1000);
-        System.out.print("\b");
-        System.out.print("\\");
-        Thread.sleep(1000);
-        System.out.print("\b");
-        System.out.print("-");
-    }
     @Override
     public void showUpdate(GameField gamefield) {}
     @Override
     public void reportError(String details) {System.err.print("\n[ERROR] " + details + "\n> ");}
     @Override
     public void reportMessage(String details) {System.out.print("\n[ERROR] " + details + "\n> ");}
+
+    public MiniModel getMiniModel() {return miniModel;}
+    public VirtualGameServer getGameServer(){ return rmi_controller;}
+
+
+    public void showCardsInCenter() throws IOException {rmi_controller.showCardsInCenter(token);}
+    public void printString(String s) {System.out.println(s);}
+
+    public void addChat(int idx, ChatMessage message) throws IOException{
+        miniModel.addChat(idx, message);
+    }
+
+    public void insertId(int id) throws IOException{
+        miniModel.setMy_index(id);
+    }
+
+    public void insertNumPlayers(int numPlayersMatch) throws IOException{
+        miniModel.setNum_players(numPlayersMatch);
+    }
+
+    public void insertPlayer(Player player) throws IOException{
+        miniModel.setMy_player(player);
+    }
+
+
     @Override
     public void showCard(PlayCard card) {
         Side back = card.getBackSide();
@@ -431,39 +333,12 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
             }
         }
     }
-    public MiniModel getMiniModel() {return miniModel;}
-    public VirtualGameServer getGameServer(){ return rmi_controller;}
-    private void showCardsInCenter() throws IOException {rmi_controller.showCardsInCenter(token);}
-    public void printString(String s) {System.out.println(s);}
-
-    public void addChat(int idx, ChatMessage message) throws IOException{
-        miniModel.addChat(idx, message);
-    }
-
-    public void insertId(int id) throws IOException{
-        miniModel.setMy_index(id);
-    }
-
-    public void insertNumPlayers(int numPlayersMatch) throws IOException{
-        miniModel.setNum_players(numPlayersMatch);
-    }
-
-    public void insertPlayer(Player player) throws IOException{
-        miniModel.setMy_player(player);
-    }
-
-
-
-
     //MAIN
-    public static void main(String[] args) throws IOException, NotBoundException, InterruptedException {
-        Registry registry = LocateRegistry.getRegistry("127.0.0.1", 1);
+    public static void main(String[] args) throws IOException, NotBoundException, InterruptedException, ClassNotFoundException {
+        Registry registry = LocateRegistry.getRegistry(Constants.IPV4, 1);
         VirtualServerF server = (VirtualServerF) registry.lookup("VirtualServer");
         new RmiClientF(server).run();
     }
 
-    public String getToken(){
-        return token;
-    }
 }
 
